# LinuxDNS

./: DNSMAP.dgml  IncludeFileDependenciesDns.dgml  MyDns.sln  README.md  dest.txt  dnsxps.xps
MyDns/: CMakeLists.txt  Get_TLD.cpp  MyDns.vcxproj  MyDns.vcxproj.filters  Read_scheurl.cpp  dest.txt  dn2ip.cpp  generate_new_id.cpp  main.cpp  mainHead.h  receiveDNS.cpp  show.cpp  total.h
MyDns/src/: CMakeLists.txt  Get_TLD.c  Get_TLD.cpp  Read_scheurl.c  Read_scheurl.cpp  dn2ip.c  generate_new_id.c  generate_new_id.cpp  main.c  main.cpp  receiveDNS.c  show.c  total.h
